# mechanix

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
examples/: driven_pendulum.py  learning_pendulum.py  nbody.py  nbody_torus.py  noether.py  pendulum.py  pendulum_phase_space.py  r3bp.py  r3bp_rot.py
hidden-laws/: README.md  hh.py  main.py  potential.py  r3bp.py  section.py  trajs.py  utils.py
integrals-of-motion/: main.py  main.typ
mechanix/: __init__.py  _integrators.py  _solvers.py  _utils.py  _viz.py
tests/: test_local_tuple_functions.py
