[project]
name = "mechanix"
version = "0.0.1"
description = "Lagrangians in JAX"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Victor Velev", email = "vivelev@icloud.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["jax", "tree-math", "tqdm"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["mechanix/*"]

[tool.hatch.envs.dev]
dependencies = [
  "jaxlib",
  "altair",
  "matplotlib",

  "pre-commit",
  "ruff",
  "ruff-lsp",
  "python-lsp-server",
  "pytest",
]

[tool.ruff]
select = ["E", "F", "I001"]
ignore = ["F722", "E731", "E741"]
include = ["mechanix", "tests", "examples"]

[tool.ruff.isort]
known-third-party = ["jax"]
combine-as-imports = true
